# cheenhub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  Makefile.toml  PHASE1_STATUS.md  README.md  package-lock.json  package.json  readme.md  tailwind.config.js  todo.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/sfu/: consumer.rs  mod.rs  publisher.rs  router.rs  types.rs
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: config.rs  db.rs  main.rs  state.rs  telemetry.rs
crates/backend/src/features/: mod.rs
crates/backend/src/features/auth/: application.rs  domain.rs  email.rs  error.rs  infrastructure.rs  mod.rs  validation.rs
crates/backend/src/features/images/: application.rs  domain.rs  mod.rs  transport.rs
crates/backend/src/features/push_notifications/: application.rs  domain.rs  error.rs  fcm.rs  mod.rs  transport.rs
crates/backend/src/features/servers/: application.rs  domain.rs  error.rs  mod.rs  realtime.rs  validation.rs
crates/backend/src/features/social/: application.rs  domain.rs  error.rs  mod.rs  realtime.rs  support.rs  transport.rs
crates/backend/src/features/text_chat/: application.rs  domain.rs  mod.rs  policy.rs  realtime.rs  validation.rs
crates/backend/src/features/voice_chat/: application.rs  infrastructure.rs  media.rs  media_policy.rs  mod.rs  realtime.rs
crates/backend/src/http/: api.rs  mod.rs
crates/backend/src/realtime/: control.rs  datagram.rs  framing.rs  hub.rs  mod.rs  network.rs  protocol.rs  router.rs  session.rs  sink.rs  tls.rs  websocket.rs
crates/client/: Cargo.toml  build.rs  index.html  tailwind.config.js  tailwind.css
crates/client/android/: AndroidManifest.xml  MainActivity.kt
crates/client/assets/: tailwind.css
crates/client/bundle/windows/: nsis-installer.nsi
crates/client/public/: manifest.webmanifest  offline.html  pwa-register.js  sw.js  sw.template.js
crates/client/public/audio/: microphone-uplink-worker.js  microphone-worklet.js  playback-clock-worklet.js
crates/client/src/: installer_main.rs  main.rs  updater_main.rs  worker_lib.rs
crates/client/src/features/: clipboard.rs  mod.rs
crates/client/src/features/app/: active_room.rs  api.rs  current_user.rs  mod.rs  server_permissions.rs  workspace_route.rs  workspace_route_storage.rs
crates/client/src/features/application_focus/: mod.rs  native.rs  provider.rs  unsupported.rs  web.rs
crates/client/src/features/application_update/: api.rs  effects.rs  handle.rs  mod.rs  notifications.rs  provider.rs  storage.rs  types.rs
crates/client/src/features/audio_playback/: backend.rs  browser_bindings.rs  browser_diagnostics.rs  browser_helpers.rs  clock.rs  jitter_buffer.rs  jitter_runtime.rs  mod.rs  native.rs  output_devices.rs  playback_pipeline.rs  provider.rs  storage.rs  unsupported.rs  web.rs  web_notifications.rs  web_voice_playback.rs
crates/client/src/features/auth/: api.rs  behavior.rs  domain.rs  guest_guard.rs  http.rs  jwt.rs  messages.rs  mod.rs  profile_api.rs  refresh.rs  refresh_lock.rs  sessions_api.rs  storage.rs
crates/client/src/features/autostart/: handle.rs  mod.rs  native.rs  provider.rs  unsupported.rs  windows.rs
crates/client/src/features/camera/: android.rs  backend.rs  browser_bindings.rs  browser_capture.rs  browser_errors.rs  mod.rs  native.rs  provider.rs  provider_context.rs  provider_runtime.rs  unsupported.rs  web.rs
crates/client/src/features/clipboard/: desktop.rs  native.rs  web.rs
crates/client/src/features/landing/: behavior.rs  data.rs  desktop.rs  mod.rs  native.rs  web.rs
crates/client/src/features/microphone/: backend.rs  browser.rs  browser_bindings.rs  browser_capture.rs  browser_diagnostics.rs  browser_encoding.rs  browser_errors.rs  browser_gain.rs  browser_worker.rs  browser_worklet.rs  core.rs  input_devices.rs  mod.rs  native.rs  provider.rs  provider_context.rs  provider_preferences.rs  provider_runtime.rs  storage.rs  unsupported.rs  vad.rs
crates/client/src/features/network/: connection_status_indicator.rs  mod.rs  quality.rs  realtime.rs
crates/client/src/features/notifications/: android.rs  direct_messages.rs  focus.rs  mod.rs  native.rs  unsupported.rs  web.rs
crates/client/src/features/pwa/: mod.rs  native.rs  unsupported.rs  web.rs
crates/client/src/features/realtime/: config.rs  error.rs  framing.rs  guards.rs  handle.rs  inbound.rs  mod.rs  provider.rs  status.rs  task.rs  websocket.rs  webtransport.rs
crates/client/src/features/runtime/: android.rs  mod.rs  native.rs  unsupported.rs  web.rs
crates/client/src/features/screen_share/: android.rs  backend.rs  browser.rs  browser_bindings.rs  browser_capture.rs  browser_errors.rs  mod.rs  native.rs  provider.rs  provider_context.rs  provider_runtime.rs  unsupported.rs
crates/client/src/features/server_settings/: api.rs  invite_list_item.rs  invites_data.rs  invites_section.rs  kick_member_modal.rs  member_row.rs  members_data.rs  members_section.rs  mod.rs  overview_section.rs  page.rs  realtime.rs  role_permissions_card.rs  role_save_bar.rs  roles_data.rs  roles_section.rs  scope.rs  voice_video_section.rs
crates/client/src/features/single_instance/: mod.rs  native.rs  unsupported.rs  windows.rs
crates/client/src/features/social/: api.rs  clipboard.rs  direct_message_composer.rs  direct_message_group.rs  direct_message_image.rs  direct_message_state.rs  direct_message_voice_button.rs  direct_message_voice_surface.rs  direct_message_workspace.rs  friend_context_menu.rs  friend_search_modal.rs  friends_section.rs  mod.rs  page.rs  presentation.rs  (+3 more)
crates/client/src/installer/: mod.rs
crates/client/src/routes/: app_direct_message.rs  app_friends.rs  app_home.rs  app_server.rs  app_server_room.rs  forgot_password.rs  invite.rs  landing.rs  login.rs  mod.rs  not_found.rs  oauth_callback.rs  register.rs  reset_password.rs
crates/client/src/update_mode/: mod.rs  native.rs
crates/client/src/updater/: mod.rs  platform.rs
crates/client/src/workers/: microphone.rs  mod.rs
frontend/: Cargo.toml  Dioxus.toml  style.css
frontend/src/: main.rs
(+416 files in other folders)
