[workspace]
members = [
    "crates/backend",
    "crates/client",
    "crates/contracts",
    "crates/migrations",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/loject/cheenhub"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dioxus = "=0.7.5"
dioxus-sdk-storage = "0.7"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
gloo-net = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["cli", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasm-bindgen-futures = "0.4"
web-time = "1"
