[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures-util = "0.3"
