[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
dioxus-web = "0.6.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-wasm = "0.2"
