[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.7.2", features = ["web"] }
dioxus-web = "0.7.2"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent",
    "MediaStream", "MediaStreamTrack", "MediaDevices", "Navigator", "Window",
    "MediaStreamConstraints", "MediaTrackConstraints",
    "AudioContext", "AnalyserNode", "AudioNode", "MediaStreamAudioSourceNode",
    "AudioContextOptions", "AudioContextLatencyCategory",
    "UrlSearchParams", "Location", "Clipboard",
    "RtcPeerConnection", "RtcConfiguration", "RtcIceServer",
    "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType",
    "RtcIceCandidate", "RtcIceCandidateInit", "RtcPeerConnectionIceEvent",
    "RtcTrackEvent", "MediaStreamEvent", "RtcPeerConnectionState",
    "RtcIceConnectionState", "RtcBundlePolicy",
    "RtcStatsReport", "Performance",
    "HtmlAudioElement", "RtcRtpSender"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
