[package]
name = "cheenhub_backend"
version = "0.1.0"
default-run = "cheenhub_backend"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
cheenhub_contracts = { path = "../contracts" }
chrono.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
image.workspace = true
lettre.workspace = true
rand_core.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
web-transport.workspace = true
web-transport-quinn.workspace = true
x509-parser.workspace = true
