[package]
name = "cheenhub_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "cheen_hub"
path = "src/main.rs"

[[bin]]
name = "cheenhub_installer"
path = "src/installer_main.rs"
required-features = ["desktop"]

[lib]
name = "cheenhub_client_worker"
path = "src/worker_lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
app = [
    "dep:base64",
    "dep:bytes",
    "dep:cheenhub_contracts",
    "dep:chrono",
    "dep:dioxus",
    "dep:dioxus-sdk-storage",
    "dep:ed25519-dalek",
    "dep:futures-channel",
    "dep:futures-util",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:url",
    "dep:uuid",
    "dep:wasm-bindgen-futures",
    "dep:web-time",
    "dep:web-transport",
    "dep:web-sys",
]
web = ["app", "dioxus/web"]
desktop = [
    "app",
    "dep:arboard",
    "dep:image",
    "system-tray",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tracing-subscriber",
    "dioxus/desktop",
]
mobile = [
    "app",
    "dep:cpal",
    "dep:jni",
    "dep:ndk-context",
    "dep:opus",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:wry",
    "dioxus/mobile",
]
system-tray = []
browser-media-diagnostics = []
# Windows-реализация desktop-клиента: cpal для ввода/вывода аудио и Opus для декодирования голоса.
windows = ["dep:cpal", "dep:opus", "dep:windows-sys"]
# Linux-реализация desktop-клиента: cpal для ввода/вывода аудио и Opus для декодирования голоса.
linux = ["dep:cpal", "dep:opus"]
# macOS-реализация desktop-клиента: cpal для ввода/вывода аудио и Opus для декодирования голоса.
macos = ["dep:cpal", "dep:opus"]
microphone_worker = [
    "dep:cheenhub_contracts",
    "dep:js-sys",
    "dep:serde_json",
    "dep:uuid",
]

[dependencies]
arboard = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cheenhub_contracts = { path = "../contracts", optional = true }
chrono = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
dioxus = { workspace = true, features = [
    "devtools",
    "launch",
    "lib",
    "logger",
    "router",
], optional = true }
dioxus-sdk-storage = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
image = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }
opus = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }
web-transport = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "GainNode",
    "DomException",
    "Document",
    "DisplayMediaStreamConstraints",
    "Element",
    "MediaDevices",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MessageEvent",
    "MessagePort",
    "Navigator",
    "Notification",
    "NotificationOptions",
    "Response",
    "Window",
    "BinaryType",
    "Worklet",
    "Event",
    "ErrorEvent",
    "WebSocket",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "console",
] }
wry = { version = "0.53.5", optional = true }
windows-sys = { workspace = true, optional = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }

[build-dependencies]
dotenvy.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
sha2.workspace = true
time.workspace = true
